Fix error spacing 2

--- a/statics/css/styles.css
+++ b/statics/css/styles.css
@@ -226,6 +226,7 @@ background-repeat: no-repeat !important;}
   #banner3 h1 {
     color:  rgb(228, 76, 101);
     font-weight: 600;
+    margin-top: 4em;
   }
   #banner3 h3 {
     color: #727888;
